--- a/TagFolderNameToAlbum/TagFolderNameToAlbum/TagFolderNameToAlbum.csproj
+++ b/TagFolderNameToAlbum/TagFolderNameToAlbum/TagFolderNameToAlbum.csproj
@@ -55,7 +55,7 @@
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
     <Reference Include="taglib-sharp">
-      <HintPath>..\..\taglib-sharp\src\bin\Debug\net40\taglib-sharp.dll</HintPath>
+      <HintPath>.\taglib-sharp.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
