--- a/TagFolderNameToAlbum/TagFolderNameToAlbum/TagFolderNameToAlbum.csproj
+++ b/TagFolderNameToAlbum/TagFolderNameToAlbum/TagFolderNameToAlbum.csproj
@@ -74,7 +74,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="InputOutput.cs" />
+    <Compile Include="ChangeAlbumTags.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
