--- a/TagFolderNameToAlbum/TagFolderNameToAlbum/TagFolderNameToAlbum.csproj
+++ b/TagFolderNameToAlbum/TagFolderNameToAlbum/TagFolderNameToAlbum.csproj
@@ -69,6 +69,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="TagsDirectory.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
